# AalgLang

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  alglang_project_structure.txt  cmake_helpers.cmake  getline.c  getline.h  go.mod  language_grammar.txt  main.go  version.h.in
.cache/clangd/index/: main.c.53E59566B8BB2A46.idx
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Sanitizers.cmake  version.h.in
cmd/: main.go
docs/: alglang_error_reporting.txt  alglang_grammar.txt  alglang_typechecker_rules.txt
examples/fr/: hello_world.al
examples/fr/new/: append_file.al  array_structure.al  bubble_sort.al  if_else.al  number_guessing_game.al  prime_number.al  while_loop.al
languages/: fr.lang
src/: algarena.h  alglex.c  alglex.h  alglexer.c  alglexer.h  algtoken.h  algtype.c  algtype.h  main.c
src/lexer/: lexer.go  tokens.go
src/repl/: repl.go
tests/: CMakeLists.txt
tests/algLangFiles/: arrays_advanced.al  arrays_basic.al  calculator.al  comparaison.al  factorial_iterative.al  fibonnaci.al  functions_basic.al  structure_advanced.al  structure_basic.al
tests/algLangFiles/french/: append_file.tokens  array_structure.tokens  arrays_advanced.tokens  arrays_as_function_parameter.al  arrays_as_function_parameter.tokens  arrays_basic.tokens  artihmetic.al  artihmetic.tokens  bubble_sort.tokens  calculator.tokens  comparaison.tokens  do_while.al  do_while.tokens  factorial_iterative.tokens  fibonnaci.tokens  for_loop.al  for_loop.tokens  functions_advanced.al  functions_advanced.tokens  functions_basic.tokens  hello_world.tokens  if_else.tokens  method.al  method.tokens  number_guessing_game.tokens  prime_number.tokens  read_from_file.al  read_from_file.tokens  structure_advanced.tokens  structure_basic.tokens  student_grade_manager.al  student_grade_manager.tokens  variables.al  variables.tokens  while_loop.tokens  write_to_file.al  write_to_file.tokens
tests/scripts/: tokenizer.sh
